--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-paginate": "^8.2.0",
     "react-router-dom": "^6.15.0",
     "react-toastify": "^9.1.3",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
